--- a/src/styles/footer.module.scss
+++ b/src/styles/footer.module.scss
@@ -9,7 +9,21 @@
 
 /* For mobile phones */
 @media only screen and (max-width: 600px) {
+    footer {
+        clip-path: polygon(0 3%, 100% 0, 100% 100%, 0% 100%) !important;
+    }
+    
+    .footer-info {
+        margin-bottom: 2em;
 
+        div:nth-child(1){
+            margin-bottom: 4em;
+        }
+    }
+
+    .container {
+        margin-top: -10% !important;
+    }
 }
 
 footer {
