Fixed navbar for non home pages, for non desktop devices

--- a/src/styles/home.module.scss
+++ b/src/styles/home.module.scss
@@ -121,6 +121,10 @@
         }
     }
 
+    .portfolio-item-title {
+        text-align: center;   
+    }
+
     .heading-container {
         min-height: 20vh !important;
         
