--- a/src/styles/errorPage.module.scss
+++ b/src/styles/errorPage.module.scss
@@ -18,16 +18,18 @@
 
         h2 {
             font-size: 3em !important;
-            padding-top: 6rem;
+            padding-top: 3rem;
         }
 
         h3 {
             font-size: 1.5em !important;
-            margin-top: -5rem;
+            margin-top: -1rem;
         }
 
         p {
             font-size: .85rem !important;
+            text-align: center !important;
+            margin-bottom: 2em !important;
         }
     }
 }
