Added more padding below top botton on footer for mobile devices:

--- a/src/styles/footer.module.scss
+++ b/src/styles/footer.module.scss
@@ -5,6 +5,10 @@
     .container {
         margin-top: -4.6% !important;
     }
+
+    .top-button-container {
+        margin-bottom: 5em;
+    }
 }
 
 /* For mobile phones */
@@ -23,6 +27,10 @@
 
     .container {
         margin-top: -10% !important;
+    }
+
+    .top-button-container {
+        margin-bottom: 5em;
     }
 }
 
