--- a/src/styles/home.module.scss
+++ b/src/styles/home.module.scss
@@ -125,7 +125,7 @@
         }
     }
 
-    .portfolio-item-title {
+    .portfolio-item-title, .portfolio-item-location {
         text-align: center;   
     }
 
