--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -9,6 +9,7 @@
     color: variables.$base-font-colour;
     margin: 0;
     padding: 0;
+    cursor: "pointer";
 
     &::selection {
         background-color: variables.$light-font-colour;
