--- a/src/styles/header.module.scss
+++ b/src/styles/header.module.scss
@@ -63,6 +63,7 @@ button {
 }
 
 .page-links {
+    cursor: pointer;
     color: $lighter-font-colour;
     margin-left: .5em;
     margin-right: .5em;
