--- a/src/styles/home.module.scss
+++ b/src/styles/home.module.scss
@@ -84,7 +84,7 @@
     }
 
     .parallax {
-        background-attachment: inherit;
+        background-attachment: inherit !important;
     }
 
     .about-container, .services-container, .sub-heading-text-styles {
