--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -3,6 +3,21 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap');
 
+@media screen
+and (min-width: 320px)
+and (max-width: 767px)
+and (orientation: landscape) {
+    html {
+        transform: rotate(-90deg);
+        transform-origin: left top;
+        width: 100vh;
+        overflow-x: hidden;
+        position: absolute;
+        top: 100%;
+        left: 0;
+    }
+}
+
 * {
     box-sizing: border-box;
     font-family: 'Open Sans', sans-serif;
