Trying to get scroll to work

--- a/src/styles/header.module.scss
+++ b/src/styles/header.module.scss
@@ -123,6 +123,12 @@ button {
     }
 }
 
+.nav-link-a-tag {
+    a:focus, a:active {
+        outline: none;
+    }
+}
+
 .page-links {
     cursor: pointer;
     color: $lighter-font-colour;
