Just saving this just in case backup doesn't work

--- a/src/styles/header.module.scss
+++ b/src/styles/header.module.scss
@@ -126,9 +126,10 @@ button {
 }
 
 a {
+    width: fit-content;
     text-align: center !important;
+    margin: auto !important;
     color: white !important;
-    z-index: 11 !important;
 
     &:hover {
         color: white !important;
