--- a/src/styles/home.module.scss
+++ b/src/styles/home.module.scss
@@ -234,6 +234,46 @@ and (-webkit-device-pixel-ratio: 3) {
     }
 }
 
+// Samsung S5 and Moto G4 landscape oriented styles
+@media only screen
+and (min-device-width: 360px)
+and (max-device-height: 640px)
+and (orientation: landscape)
+and (-webkit-device-pixel-ratio: 3) {
+
+    .opening-message-container {
+        margin-top: 1em !important;
+
+        &::after {
+            bottom: -7% !important;
+        }
+    }
+
+    .first-opening-phrase, .second-opening-phrase {
+        font-size: 1.25em !important;
+        max-width: 30ch !important;
+    }
+
+    .about-container {
+        max-width: 100vw;
+        padding-left: 2em;
+        padding-right: 2em;
+        text-align: center;
+    }
+
+    .portfolio-heading-container {
+        min-height: 40vh !important;
+        padding-top: 1.5em !important;
+    }
+
+    .content-container {
+        min-height: 160vh !important;
+        iframe {
+            min-height: 170vh !important;
+        }
+    }
+}
+
 h1, h2, h3, h4, h5, p {
     max-width: 60ch;
 }
