made error page responsive to older android phones

--- a/src/styles/errorPage.module.scss
+++ b/src/styles/errorPage.module.scss
@@ -94,6 +94,37 @@ and (-webkit-device-pixel-ratio: 2) {
     }
 }
 
+// Samsung S5 and Moto G4 landscape oriented styles
+@media only screen
+and (min-device-width: 360px)
+and (max-device-height: 640px)
+and (orientation: landscape)
+and (-webkit-device-pixel-ratio: 3) {
+
+    .opening-message-container {
+        margin-bottom: -1rem;
+        width: 100%;
+        padding-top: 10.5em;
+        padding-bottom: 15rem;
+
+        h2 {
+            font-size: 4em !important;
+            padding-top: 4rem;
+        }
+
+        h3 {
+            font-size: 1em !important;
+            margin-top: -2rem;
+        }
+
+        p {
+            font-size: .9rem !important;
+            text-align: center !important;
+            margin-bottom: 1em !important;
+        }
+    }    
+}
+
 .opening-image {
     position: absolute;
     z-index: -10;
