--- a/src/styles/home.module.scss
+++ b/src/styles/home.module.scss
@@ -150,9 +150,9 @@
     }
 
     .content-container {
-        min-height: 140vh !important;
+        min-height: 130vh !important;
         iframe {
-            min-height: 150vh !important;
+            min-height: 140vh !important;
         }
     }
 }
@@ -187,6 +187,10 @@ and (-webkit-device-pixel-ratio: 2) {
     .portfolio-heading-container {
         min-height: 40vh !important;
         padding-top: 1.5em !important;
+    }
+
+    .form-placement {
+        top: 8% !important;
     }
 
     .content-container {
