Updated subheading font colour for about me section

--- a/src/styles/home.module.scss
+++ b/src/styles/home.module.scss
@@ -497,7 +497,7 @@ h1, h2, h3, h4, h5, p {
     text-align: center;
 
     h3 {
-        color: $font-highlight-colour;
+        color: $sub-heading-font-colour;
         font-weight: bold;
     }
 
