--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -6,6 +6,7 @@ $footer-text-colour: #ddd;
 $background-colour: #052517;
 $light-background-colour: #e3fbe3;
 $font-highlight-colour: #008000;
+$sub-heading-font-colour: rgba(15, 110, 69, 0.9);
 $header-background-colour: rgba(158, 156, 156, 0.8);
 $description-text-colour: rgba(0, 0, 0, .7);
 
