--- a/src/styles/home.module.scss
+++ b/src/styles/home.module.scss
@@ -555,7 +555,7 @@ h1, h2, h3, h4, h5, p {
     letter-spacing: .25em;
     text-align: center;
     font-weight: bold;
-    font-size: 2.25em;
+    font-size: 2em !important;
     padding: 2rem;
 }
 
